<resources>
    <string name="app_name">App 4 MyQA</string>
    <string name="management">Question Management</string>
    <string name="login">LOGIN</string>
    <string name="loginID">LoginID</string>
    <string name="password">Password</string>
    <string name="OverviewActivityTitle">信息概览</string>
    <string name="CaseHandActivityTitle">案例处理</string>
    <string name="SystemAdministratorActivityTitle">系统管理</string>
    <string name="EventAddActivityTitle">事件管理</string>
    <string name="WMSAddActivityTitle">WMS管理</string>
    <string name="TMSManageActivityTitle">TMS管理</string>
    <string name="EventClosedActivityTitle">事件关闭</string>
    <string name="WMSClosedActivityTitle">WMS关闭</string>
    <string name="TMSClosedActivityTitle">TMS关闭</string>
    <string name="EventHistoricalActivityTitle">事件历史</string>
    <string name="WMSHistoricalActivityTitle">WMS历史</string>
    <string name="TMSHistoricalActivityTitle">TMS历史</string>
    <string name="HomeActivityTitle">Home</string>
    <string name="FeedbackActivityTitle">Feedback</string>
    <string name="event_add">事件管理/新增</string>
    <string name="event_project_name">*项目名称(Project) :</string>
    <string name="event_supplier">*所属供应商:</string>
    <string name="event_lssue_date">*问题发现时间(lssue Date) :</string>
    <string name="event_feedback">*是否由客户反馈 :</string>
    <string name="containment_plan_date">*补救方案期限(Containment Plan Date):</string>
    <string name="event_Issue_Type">*问题类型(Issue Type):</string>
    <string name="event_severity">*问题严重性(severity):</string>
    <string name="provenance_relating_info">*始发地和涉及库房信息:</string>
    <string name="event_spc_name">*SPC名(填写方式：自营／外包＋城市名，SAMPLE:自营 武汉):</string>
    <string name="event_order_no">订单号(Order No):</string>
    <string name="event_hawb">运单号(HAWB):</string>
    <string name="event_part_information">备案信息(Part Information):</string>
    <string name="event_recovery_description">补救方案描述(Recovery Description):</string>
    <string name="event_scheduled_delivery">原定派送/取件时间(Scheduled delivery/pick-up time):</string>
    <string name="event_actual_delivery_time">实际派送/取件时间(Actual delivery/pick-up time):</string>
    <string name="event_problem_statement">问题描述(Problem Statement):</string>
    <string name="event_root_cause">问题根本原因(Root Cause):</string>
    <string name="event_corrective_action">改变方案(Corrective Action):</string>
    <string name="event_accessory">附件：</string>
    <string name="title_name">WMS/管理/新增</string>
    <string name="program_name">项目</string>
    <string name="city_name">城市</string>
    <string name="questiontype_name">问题类型</string>
    <string name="scaleofproblem_name">问题严重性</string>
    <string name="starttime_name">项目发起时间</string>
    <string name="endtime_name">要求结束时间</string>
    <string name="email_name">邮件人</string>
    <string name="emailgroup_name">邮件组</string>
    <string name="conductor_name">处理人</string>
    <string name="describequestion_name">问题描述</string>
    <string name="attchment_name">附件</string>
    <string name="submit_name">提交</string>
    <string name="reset_name">重置</string>
    <string-array name="num_from">
        <item>10</item>
        <item>25</item>
        <item>50</item>
        <item>100</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tms_project">项目</string>
    <string name="tms_city">城市</string>
    <string name="tms_problem_type">问题类型</string>
    <string name="tms_project_lunch_time">项目发起时间</string>
    <string name="tms_mail_man">邮件人</string>
    <string name="mail_man"> Email</string>
    <string name="tms_mail_group">邮件组</string>
    <string name="tms_problem_severity">问题严重性</string>
    <string name="tms_deal_with">处理人</string>
    <string name="event_close_number">编号</string>
</resources>
