<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.aichifan.app4myqa.UserInfoActivity">

    <ViewStub
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stubHeader"
        android:inflatedId="@+id/header"
        android:layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_weight="1">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/overViewBtn"
                android:text="@string/OverviewActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="10dp"
                android:drawableTop="@mipmap/overview"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/caseHandBtn"
                android:text="@string/CaseHandActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:drawableTop="@mipmap/hand"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/SysAdminBtn"
                android:text="@string/SystemAdministratorActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="10dp"
                android:drawableTop="@mipmap/admin"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/eventManageBtn"
                android:text="@string/EventAddActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="10dp"
                android:drawableTop="@mipmap/manage"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/wmsManageBtn"
                android:text="@string/WMSAddActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:drawableTop="@mipmap/manage"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tmsManageBtn"
                android:text="@string/TMSManageActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="10dp"
                android:drawableTop="@mipmap/manage"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/eventClosedBtn"
                android:text="@string/EventClosedActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="10dp"
                android:drawableTop="@mipmap/close"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/wmsClosedBtn"
                android:text="@string/WMSClosedActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:drawableTop="@mipmap/close"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tmsClosedBtn"
                android:text="@string/TMSClosedActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="10dp"
                android:drawableTop="@mipmap/close"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/eventHistoryBtn"
                android:text="@string/EventHistoricalActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="10dp"
                android:drawableTop="@mipmap/history"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/wmsHistoryBtn"
                android:text="@string/WMSHistoricalActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:drawableTop="@mipmap/history"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/tmsHistoryBtn"
                android:text="@string/TMSHistoricalActivityTitle"
                android:textSize="21dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="10dp"
                android:drawableTop="@mipmap/history"
                android:onClick="onButtonClick"
                android:background="@drawable/button_beat_box"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
