<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WMSAddActivity">

    <ViewStub
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stubHeader"
        android:inflatedId="@+id/header"
        android:layout="@layout/header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/title_name"
        android:textSize="25dp"
        android:gravity="center"
        android:id="@+id/title"
        android:background="@color/colorLabelBackground"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/program_name"
        android:textSize="22dp"
        android:layout_below="@+id/title"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:textColor="#ff000000"
        android:id="@+id/program"/>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/program"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:entries="@array/pro"
        android:id="@+id/sp_program"
        android:background="@drawable/bg_edittext">
    </Spinner>
    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignRight="@+id/sp_program"
        android:layout_below="@+id/title"
        android:layout_marginTop="18dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/city_name"
        android:textSize="22dp"
        android:layout_toRightOf="@+id/sp_program"
        android:layout_alignBaseline="@+id/program"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:textColor="#ff000000"
        android:id="@+id/city"/>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/city"
        android:layout_below="@+id/title"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:entries="@array/pro"
        android:id="@+id/sp_city"
        android:background="@drawable/bg_edittext">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/questiontype_name"
        android:textSize="22dp"
        android:layout_below="@+id/city"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#ff000000"
        android:id="@+id/questiontype"/>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/questiontype"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/sp_city"
        android:layout_marginTop="20dp"
        android:entries="@array/pro"
        android:id="@+id/sp_questiontype"
        android:background="@drawable/bg_edittext">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/scaleofproblem_name"
        android:textSize="22dp"
        android:layout_below="@+id/questiontype"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#ff000000"
        android:id="@+id/scaleofproblem"/>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/scaleofproblem"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/sp_questiontype"
        android:layout_marginTop="20dp"
        android:entries="@array/pro"
        android:id="@+id/sp_scaleofproblem"
        android:background="@drawable/bg_edittext">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/starttime_name"
        android:textSize="22dp"
        android:layout_below="@+id/scaleofproblem"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:textColor="#ff000000"
        android:id="@+id/starttime"/>
    <EditText
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/starttime"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/scaleofproblem"
        android:layout_marginTop="20dp"
        android:id="@+id/ed_starttime"
        android:background="@drawable/bg_edittext">
    </EditText>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/ed_starttime"
        android:src="@drawable/time"
        android:layout_below="@+id/scaleofproblem"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/endtime_name"
        android:textSize="22dp"
        android:layout_below="@+id/starttime"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:textColor="#ff000000"
        android:id="@+id/endtime"/>
    <EditText
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/endtime"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/ed_starttime"
        android:layout_marginTop="15dp"
        android:id="@+id/ed_endtime"
        android:background="@drawable/bg_edittext">
    </EditText>
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/ed_endtime"
        android:src="@drawable/time"
        android:layout_below="@+id/ed_starttime"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/email_name"
        android:textSize="22dp"
        android:layout_below="@+id/endtime"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:textColor="#ff000000"
        android:id="@+id/email"/>
    <EditText
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_toRightOf="@+id/email"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/ed_endtime"
        android:layout_marginTop="20dp"
        android:id="@+id/ed_email"
        android:background="@drawable/bg_edittext">
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/emailgroup_name"
        android:textSize="22dp"
        android:layout_below="@+id/endtime"
        android:layout_toRightOf="@+id/ed_email"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:textColor="#ff000000"
        android:id="@+id/emailgroup"/>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/emailgroup"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/ed_endtime"
        android:layout_marginTop="25dp"
        android:entries="@array/pro"
        android:id="@+id/sp_emailgroup"
        android:background="@drawable/bg_edittext">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/conductor_name"
        android:textSize="22dp"
        android:layout_below="@+id/emailgroup"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:textColor="#ff000000"
        android:id="@+id/conductor"/>
    <Spinner
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/conductor"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/sp_emailgroup"
        android:layout_marginTop="30dp"
        android:entries="@array/pro"
        android:id="@+id/sp_conductor"
        android:background="@drawable/bg_edittext">
    </Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/describequestion_name"
        android:textSize="22dp"
        android:layout_below="@+id/conductor"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#ff000000"
        android:id="@+id/describequestion"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/describequestion"
        android:layout_marginTop="20dp"
        android:inputType="textMultiLine"
        android:id="@+id/ed_describequestion"
        android:hint="请输入问题描述..."
        android:textSize="15dp"
        android:background="@drawable/bg_edittext">
    </EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:text="@string/attchment_name"
        android:textSize="22dp"
        android:layout_below="@+id/ed_describequestion"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#ff000000"
        android:id="@+id/attchment"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_toRightOf="@+id/attchment"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/ed_describequestion"
        android:layout_marginTop="20dp"
        android:entries="@array/pro"
        android:inputType="textMultiLine"
        android:background="#ff0000ff"
        android:id="@+id/bu_attchment"
        android:text="Select files..."
        android:textColor="#ffffff">
    </Button>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_name"
        android:layout_below="@+id/attchment"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="20dp"
        android:onClick="sumbitQuestion"
        android:id="@+id/bu_sumbit"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_name"
        android:layout_below="@+id/attchment"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="20dp"
        android:onClick="resetQuestion"
        android:id="@+id/bu_reset"/>

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>
